[package]
name = "xrb"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]

[dependencies]
tokio-io = "*"
tokio-core = "0.1"
tokio-uds = "0.1.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures = "0.1.6"
byteorder = "0.5"
xauth = { path = "./xauth" }
clippy = { version = "*", optional = true }

[features]
default = []
dev = ["clippy"]
